# incrementalkit

./: .dependency-cruiser.js  .editorconfig  .gitignore  .gitpod.yml  .releaserc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rome.json  tsconfig.json  vitest.config.ts
.github/actions/: release.yml
.github/workflows/: release.yml
scratch/: gameDataTimestamp
src/: index.ts
src/currency/: Currency.ts  index.ts
src/currency/mixins/: Linked.ts
src/datastore/: Aggregate.ts  LocalStorage.ts  base.ts
src/game/: Game.ts
src/mixin/: base.d.ts
src/number/: Standard.ts
src/producer/: DiminishingProducer.ts  Producer.ts  SimpleProducer.ts  index.ts
src/producer/mixins/: Diminishing.ts
src/serialize/: Serializable.ts  index.ts  schema.ts
src/util/: easings.ts  unwrap.ts
test/: currencies.test.ts  e2e.test.ts  producers.test.ts
test/currency/: currencies.test.ts  serialize.test.ts
test/currency/__snapshots__/: serialize.test.ts.snap
test/currency/mixins/: Linked.test.ts
test/datastore/: Datastore.test.ts
test/producer/: producers.test.ts
test/producer/mixins/: Diminishing.test.ts
test/schema/: base.test.ts
wasm/number_base/: Cargo.toml
wasm/number_base/src/: lib.rs
wasm/number_double_float/: Cargo.toml
wasm/number_double_float/src/: lib.rs  math.rs  util.rs
wasm/number_double_float/src/impl/: arithmetic.rs  conversion.rs  formatting.rs  mod.rs  util.rs
