[package]
name = "number_double_float"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
number_base = { version = "0.1.0", path = "../number_base" }
wasm-bindgen = "0.2.84"
